Ensure long titles don't overflow. #5810

--- a/src/app/styles/components/media/_media-detail.scss
+++ b/src/app/styles/components/media/_media-detail.scss
@@ -59,10 +59,6 @@
   @media screen and (min-width: 800px) {
     width: 700px;
   }
-
-  @media screen and (min-width: 900px) {
-    width: 800px;
-  }
 }
 
 // Optional description
